--- a/currency.config
+++ b/currency.config
@@ -1,20 +1,4 @@
-5, 4, 4, AMP
-5, 3, 3, FLDC
-5, 3, 3, SDC
-5, 3, 3, BURST
-5, 3, 3, STEEM
-5, 3, 3, XMR
-5, 3, 3, PASC
-5, 3, 3, XRP
-5, 3, 3, ETC
-5, 3, 3, ETH
-10,5,10,VIA
-10,1,10,PINK
-10,1,10,NOTE
-10,1,10,GRC
-10,1,10,LSK
-10,1,10,POT
-10,1,10,NAV
-10,1,10,BTS
-10,1,10,UNITY
-10,1,10,VTC
+25, 6, 6, XBC
+25, 6, 6, BELA
+25, 4, 4, LTC
+25, 6, 6, VOX
