--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -8,8 +8,8 @@ secret=<your secret key>
 #"
 spring.datasource.url=jdbc:mysql://localhost:3306/polbot?useSSL=false
 # Username and password
-spring.datasource.username=root
-spring.datasource.password=145145145
+spring.datasource.username=<your dbuser>
+spring.datasource.password=<your dbpass>
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -34,5 +34,18 @@ endpoints.jmx.unique-names=true
 #
 #
 #
-# application messages
-config.currency.page.title=Currency Config Page
+# mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<your mail username>
+spring.mail.password=<your mail pass>
+spring.mail.to=<your to mail>
+spring.mail.from=<your from mail>
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+#
+#
+#
+#thymyleaf config
+spring.thymeleaf.cache=false
