--- a/polbot-core/pom.xml
+++ b/polbot-core/pom.xml
@@ -41,6 +41,13 @@
             <version>${mysql.driver.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>6.1.0.jre8</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
