--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -6,10 +6,11 @@ secret=<your secret key>
 # Set here configurations for the database connection
 # Connection url for the database "cookle
 #"
-spring.datasource.url=jdbc:mysql://localhost:3306/polbot?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/polbot?useSSL=false
+spring.datasource.url=jdbc:sqlserver://devsqlserver;databaseName=TestEY_5;integratedSecurity=true;
 # Username and password
-spring.datasource.username=<your dbuser>
-spring.datasource.password=<your dbpass>
+spring.datasource.username=
+spring.datasource.password=
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -27,25 +28,22 @@ spring.jpa.hibernate.ddl-auto=update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 logging.file=application.log
 endpoints.jmx.domain=myapp
 endpoints.jmx.unique-names=true
 #
 #
 #
-# mail properties
+# application messages
+config.currency.page.title=Currency Config Page
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=<your mail username>
-spring.mail.password=<your mail pass>
-spring.mail.to=<your to mail>
-spring.mail.from=<your from mail>
+spring.mail.username=
+spring.mail.password=
+spring.mail.from=
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
-#
-#
-#
-#thymyleaf config
-spring.thymeleaf.cache=false
