cache support added. tickermap moved out of user loop for optimization. collection filters replaced with queries for optimization.

--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -41,9 +41,9 @@ config.currency.page.title=Currency Config Page
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
-spring.mail.from=
+spring.mail.username=<your email address>
+spring.mail.password=<your password>
+spring.mail.from=<your email address>
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
