spring.messages.basename added for messages file.

--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -19,7 +19,8 @@ spring.datasource.validationQuery=SELECT 1
 # ===============================
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
-# Show or not log for each sql query
+# Show or not log for each sq
+#l query
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
@@ -47,3 +48,7 @@ spring.mail.from=<your email address>
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
+
+#thymyleaf config
+spring.thymeleaf.cache=false
+spring.messages.basename=Messages
