--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -6,11 +6,10 @@ secret=<your secret key>
 # Set here configurations for the database connection
 # Connection url for the database "cookle
 #"
-#spring.datasource.url=jdbc:mysql://localhost:3306/polbot?useSSL=false
-spring.datasource.url=jdbc:sqlserver://devsqlserver;databaseName=TestEY_5;integratedSecurity=true;
+spring.datasource.url=jdbc:mysql://localhost:3306/polbot?useSSL=false
 # Username and password
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=polbot
+spring.datasource.password=145145145
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -29,7 +28,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.file=application.log
 endpoints.jmx.domain=myapp
 endpoints.jmx.unique-names=true
@@ -42,13 +41,13 @@ config.currency.page.title=Currency Config Page
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=<your email address>
-spring.mail.password=<your password>
-spring.mail.from=<your email address>
+spring.mail.username=hrksdlhyt@gmail.com
+spring.mail.password=145145145145
+spring.mail.from=hrksdlhyt@gmail.com
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
 
 #thymyleaf config
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.messages.basename=Messages
