--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -8,8 +8,8 @@ secret=<your secret key>
 #"
 spring.datasource.url=jdbc:mysql://localhost:3306/polbot?useSSL=false
 # Username and password
-spring.datasource.username=polbot
-spring.datasource.password=145145145
+spring.datasource.username=
+spring.datasource.password=
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -42,7 +42,7 @@ config.currency.page.title=Currency Config Page
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hrksdlhyt@gmail.com
-spring.mail.password=145145145145
+spring.mail.password=
 spring.mail.from=hrksdlhyt@gmail.com
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
