--- a/polbot-core/pom.xml
+++ b/polbot-core/pom.xml
@@ -131,6 +131,15 @@
             <version>2.8.4</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
