property file cleanup

--- a/polbot-core/src/main/resources/application.properties
+++ b/polbot-core/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-api=<your api key>
-secret=<your secret key>
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -41,9 +39,9 @@ config.currency.page.title=Currency Config Page
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hrksdlhyt@gmail.com
+spring.mail.username=
 spring.mail.password=
-spring.mail.from=hrksdlhyt@gmail.com
+spring.mail.from=
 spring.mail.properties.mail.smtp.auth=true;
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
