--- a/polbot-core/pom.xml
+++ b/polbot-core/pom.xml
@@ -138,6 +138,12 @@
             <version>3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>eu.verdelhan</groupId>
+            <artifactId>ta4j</artifactId>
+            <version>0.8</version>
+        </dependency>
+
 
     </dependencies>
 
